fixing left alignment on header and GoBackBar

--- a/src/components/goBackBar.module.scss
+++ b/src/components/goBackBar.module.scss
@@ -1,27 +1,26 @@
 .goBack {
-    @include respond-to("<=s") {
-      justify-content: start;
+  background-color: $color-neutral-black;
+  @include respond-to("<=s") {
+    justify-content: start;
   }
-    &:first-child > div > div{
-      align-items: center;
-      display: grid;
-      padding: 10px 8px;      
-    }
-    &__wrapper {
-      display: grid;
-      grid-template-columns: min-content auto;
-      gap: 10px;
-      cursor: pointer;
-      width: fit-content;
-    }
-    background-color: $color-neutral-black;
-    justify-content: center;
-    span {
-    color: white;
-    }
-    &__icon {
-        position: relative;
-        width: 24px;
-        aspect-ratio: 1;
-    }
+  &:first-child > div > div{
+    align-items: center;
+    display: grid;
+    padding: 10px 14px;      
   }
+  &__wrapper {
+    display: grid;
+    grid-template-columns: min-content auto;
+    gap: 10px;
+    cursor: pointer;
+    width: fit-content;
+  }
+  span {
+  color: white;
+  }
+  &__icon {
+      position: relative;
+      width: 24px;
+      aspect-ratio: 1;
+  }
+}
