--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -14,7 +14,7 @@
       width: rem(120.84px);
       height: rem(48.15px);
       @include respond-to("<=m") {
-        width: rem(195.88px);
+        width: rem(95.88px);
         height: rem(38.2px);
         padding-bottom: 12px;
         align-items: center;
